--- a/src/Infrastructure/ATMApp.Infrastructure/ATMApp.Infrastructure.csproj
+++ b/src/Infrastructure/ATMApp.Infrastructure/ATMApp.Infrastructure.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Context\" />
-    <Folder Include="EntityTypeConfiguration\" />
-    <Folder Include="Repositories\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\ATMApp.Domain\ATMApp.Domain.csproj" />
   </ItemGroup>
 
 </Project>
